--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@blocknote/core": "^0.10.1",
     "@blocknote/react": "^0.10.1",
-    "@clerk/clerk-react": "^4.30.0",
+    "@clerk/nextjs": "^6.21.0",
     "@edgestore/react": "^0.1.4",
     "@edgestore/server": "^0.1.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
