--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "convex": "^1.6.3",
     "emoji-picker-react": "^4.6.0",
     "lucide-react": "^0.298.0",
-    "next": "14.0.4",
+    "next": "15.3.3",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18",
+    "react-dom": "18",
     "react-dropzone": "^14.2.3",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.2.4",
@@ -47,7 +47,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.2.29",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
