feat: add sign in

--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "cmdk": "^0.2.1",
     "emoji-picker-react": "^4.12.2",
     "lucide-react": "^0.298.0",
-    "next": "15.3.3",
+    "next": "^14.1.1",
     "next-themes": "^0.2.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-textarea-autosize": "^8.5.9",
     "sonner": "^1.7.4",
