--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@blocknote/core": "^0.10.1",
-    "@blocknote/react": "^0.10.1",
+    "@blocknote/core": "^0.31.2",
+    "@blocknote/mantine": "^0.31.2",
+    "@blocknote/react": "^0.31.2",
     "@edgestore/react": "^0.1.7",
     "@edgestore/server": "^0.1.7",
     "@radix-ui/react-alert-dialog": "^1.1.14",
