--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "@veltdev/react": "4.5.0-beta.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
