--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@blocknote/react": "^0.31.2",
     "@edgestore/react": "^0.1.7",
     "@edgestore/server": "^0.1.7",
+    "@harshtalks/slash-tiptap": "^1.3.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -23,6 +24,32 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/core": "^2.14.0",
+    "@tiptap/extension-blockquote": "^2.14.0",
+    "@tiptap/extension-bold": "^2.14.0",
+    "@tiptap/extension-bullet-list": "^2.14.0",
+    "@tiptap/extension-code": "^2.14.0",
+    "@tiptap/extension-code-block-lowlight": "^2.14.0",
+    "@tiptap/extension-color": "^2.14.0",
+    "@tiptap/extension-document": "^2.14.0",
+    "@tiptap/extension-dropcursor": "^2.14.0",
+    "@tiptap/extension-heading": "^2.14.0",
+    "@tiptap/extension-highlight": "^2.14.0",
+    "@tiptap/extension-history": "^2.14.0",
+    "@tiptap/extension-horizontal-rule": "^2.14.0",
+    "@tiptap/extension-italic": "^2.14.0",
+    "@tiptap/extension-link": "^2.14.0",
+    "@tiptap/extension-list-item": "^2.14.0",
+    "@tiptap/extension-ordered-list": "^2.14.0",
+    "@tiptap/extension-paragraph": "^2.14.0",
+    "@tiptap/extension-placeholder": "^2.14.0",
+    "@tiptap/extension-strike": "^2.14.0",
+    "@tiptap/extension-task-item": "^2.14.0",
+    "@tiptap/extension-task-list": "^2.14.0",
+    "@tiptap/extension-text": "^2.14.0",
+    "@tiptap/extension-text-style": "^2.14.0",
+    "@tiptap/extension-underline": "^2.14.0",
+    "@tiptap/html": "^2.14.0",
     "@tiptap/pm": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
@@ -32,6 +59,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
     "emoji-picker-react": "^4.12.2",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.298.0",
     "next": "^14.1.1",
     "next-themes": "^0.2.1",
