--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "@tiptap/pm": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
-    "@veltdev/react": "4.5.0-beta.21",
-    "@veltdev/tiptap-velt-comments": "4.5.0-beta.13",
+    "@veltdev/react": "4.4.0-beta.12",
+    "@veltdev/tiptap-velt-comments": "^4.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
